# trusty-timer

./: Cargo.toml  Makefile  README.md  TrustyTimer.lnk  blocklist.txt  build.rs  install.bat  trusty-timer-manifest.rc
src/: main.rs  pomodoro.rs  sounds.rs  webblock.rs
src/numeric_input/: mod.rs  numeric_text_box.rs  small_btn.rs
