[package]
name = "trusty-timer"
version = "0.1.0"
authors = ["Jordan Poles <jpdev.noreply@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "time"] }
pbr = "1.0"